<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="web_app_domain">twilio-video-react.appspot.com</string>
    <string name="room_screen_connection_failure_title">Connection Failure</string>
    <string name="room_screen_connection_failure_message">Failed to connect to the room.</string>
    <string name="room_screen_max_participant_failure_message">Room contains too many participants.</string>
    <string name="room_screen_token_retrieval_failure_message">Failed to retrieve the room token.</string>
    <string name="room_screen_token_expired_message">Passcode expired. Please sign in with a new passcode.</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="room_screen_pin_icon_description">Participant Pin</string>
    <string name="room_notification_channel_title">Video Call</string>
    <string name="room_notification_title">Ongoing video call in %s</string>
    <string name="room_notification_message">Tap to return to the room.</string>
    <string name="settings_screen_enable_stats">Enable Stats</string>
    <string name="settings_screen_enable_network_quality_level">Enable Network Quality Level</string>
    <string name="settings_screen_enable_insights">Enable Insights</string>
    <string name="settings_screen_enable_automatic_track_subscription">Enable Automatic Track Subscription</string>
    <string name="settings_screen_enable_dominant_speaker">Enable Dominant Speaker</string>
    <string name="settings_screen_record_participants_on_connect">Record Participants on Connect</string>
    <string name="settings_screen_enable_network_quality_level_description">Network Quality Level</string>
    <string name="settings_screen_environment_string">Environment</string>
    <string name="settings_screen_topology">Room Type</string>
    <string name="settings_screen_media">Media</string>
    <string name="settings_screen_video_codecs">Video Codec</string>
    <string name="settings_screen_audio_codecs">Audio Codec</string>
    <string name="settings_screen_max_video_bitrate">Video Bitrate (Kbps)</string>
    <string name="settings_screen_max_audio_bitrate">Audio Bitrate (Kbps)</string>
    <string name="settings_screen_vp8_simulcast">VP8 Simulcast</string>
    <string name="settings_screen_identity">User Identity</string>
    <string name="settings_screen_version">App Version</string>
    <string name="settings_screen_video_library_version">SDK Version</string>
    <string name="settings_screen_logout">Log Out</string>
    <string name="settings_screen_video_resolution">Video Resolution</string>
    <string-array name="settings_screen_environment_array">
        <item>Production</item>
        <item>Staging</item>
        <item>Development</item>
    </string-array>
    <string-array name="settings_screen_environment_array_values">
        <item>production</item>
        <item>stage</item>
        <item>dev</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_modes">
        <item>Server Default</item>
        <item>Collaboration</item>
        <item>Grid</item>
        <item>Presentation</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_mode_values">
        <item>Server Default</item>
        <item>COLLABORATION</item>
        <item>GRID</item>
        <item>PRESENTATION</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_dominant_speaker_priorities">
        <item>Server Default</item>
        <item>Low</item>
        <item>Standard</item>
        <item>High</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_dominant_speaker_priority_values">
        <item>Server Default</item>
        <item>LOW</item>
        <item>STANDARD</item>
        <item>HIGH</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_track_switch_modes">
        <item>Server Default</item>
        <item>Disabled</item>
        <item>Predicted</item>
        <item>Detected</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_track_switch_mode_values">
        <item>Server Default</item>
        <item>DISABLED</item>
        <item>PREDICTED</item>
        <item>DETECTED</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_render_dimensions">
        <item>Server Default</item>
        <item>176x144</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
        <item>1920x1080</item>
    </string-array>
    <string name="stats_enable_in_settings">Enable in Settings</string>
    <string name="enable_ice">Enable ICE Options</string>
    <string name="ice_options">Enable ICE options</string>
    <string name="app_name">Cloud9</string>
    <string name="client_name">Client Name</string>
    <string name="settings_title">Settings</string>
    <string name="settings_title_advanced">Advanced</string>
    <string name="settings_title_internal">Internal</string>
    <string name="settings_title_bandwidth_profile">Bandwidth Profile</string>
    <string name="settings_title_audio">Audio</string>
    <string name="username">Username</string>
    <string name="join_room">Join Room</string>
    <string name="registering">Registering</string>
    <string name="video_client_status">Video Client Status</string>
    <string name="room_status">Room Status</string>
    <string name="video_constraints">Video Constraints</string>
    <string name="statistics">Statistics</string>
    <string name="local">Local Media</string>
    <string name="remote">Remote Media</string>
    <string name="stun_turn">STUN or TURN server</string>
    <string name="add_server">Add</string>
    <string name="ice_options_button">Ice Options</string>
    <string name="prefer_h264">Prefer H264</string>
    <string name="auto_register">Automatically register when app launches</string>
    <string name="auto_accept">Accept invites automatically</string>
    <string name="use_headset">Start audio using headset</string>
    <string name="error_initializing_conversations">Error initializing conversations sdk</string>
    <string name="logout_when_conv_ends">Logout when conversation ends</string>
    <string name="room_name">Room Name</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="pause_audio">Pause audio</string>
    <string name="resume_audio">Resume audio</string>
    <string name="pause_video">Pause video</string>
    <string name="resume_video">Resume video</string>
    <string name="share_screen">Share screen</string>
    <string name="select_audio_device">Select audio device</string>
    <string name="stop_screen_share">Stop screen share</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="join">Join</string>
    <string name="room">Room</string>
    <string name="stats_track_sid">sid</string>
    <string name="stats_codec">codec</string>
    <string name="stats_packets">packets lost</string>
    <string name="stats_bytes_sent">bytes sent</string>
    <string name="stats_bytes_received">bytes received</string>
    <string name="stats_gathering_disabled">Statistics Gathering Disabled</string>
    <string name="stats_unavailable">Statistics Unavailable</string>
    <string name="stats_description_join_room">Join a Room to View Statistics</string>
    <string name="stats_description_media_not_shared">Media is Not Being Shared</string>
    <string name="stats_rtt">round trip time</string>
    <string name="stats_jitter">jitter</string>
    <string name="stats_audio_level">audio level</string>
    <string name="stats_dimensions">dimensions</string>
    <string name="stats_framerate">framerate</string>
    <string name="audio_track">Audio Track</string>
    <string name="local_audio_track">Local Audio Track</string>
    <string name="video_track">Video Track</string>
    <string name="local_video_track">Local Video Track</string>
    <string name="camera_video_track">Camera Video Track</string>
    <string name="screen_video_track">Screen Video Track</string>
    <string name="you">You</string>
    <string name="bitrate">bps</string>
    <string name="recording_notice">Recording may be enabled for quality assurance.</string>
    <string name="recording">Recording</string>
    <string name="audio_toggle">Audio toggle</string>
    <string name="stats_disabled">Stats disabled</string>
    <string name="primary_profile_picture">Primary view profile picture</string>
    <string name="profile_picture">Profile picture</string>
    <string name="number">Number</string>
    <string name="settings_screen_bandwidth_profile_mode">Mode</string>
    <string name="settings_screen_max_subscription_bitrate">Max Subscription Bitrate (Kbps)</string>
    <string name="settings_screen_max_video_tracks">Max Video Tracks</string>
    <string name="settings_screen_bandwidth_profile_dominant_speaker_priority">Dominant Speaker Priority</string>
    <string name="settings_screen_bandwidth_profile_track_switch_mode">Track Switch Off Mode</string>
    <string name="settings_screen_render_dimensions">Render Dimensions</string>
    <string name="settings_screen_bandwidth_profile_low_track_priority">Low Track Priority</string>
    <string name="settings_screen_bandwidth_profile_standard_track_priority">Standard Track Priority</string>
    <string name="settings_screen_bandwidth_profile_high_track_priority">High Track Priority</string>
    <string name="settings_screen_audio_acoustic_echo_canceler">Hardware Acoustic Echo Canceler</string>
    <string name="settings_screen_audio_noise_supressor">Hardware Noise Supressor</string>
    <string name="settings_screen_audio_automatic_gain_control">Hardware Automatic Gain Control</string>
    <string name="settings_screen_audio_open_sles_usage">Open SLES Usage</string>
    <string name="launcher_name">video</string>
    <string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>
    <string name="audio_device">Audio Device</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="select_device">Select Audio Device</string>
    <string name="callee">client identity or phone number</string>
</resources>
