<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_drawer"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
      android:id="@+id/room"
      layout="@layout/content_room" />

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/lobby_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/lobbyToolbar"
      app:elevation="0dp">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.Lobby.PopupMenu" />

      <include
        android:id="@+id/join_room"
        layout="@layout/join_room"
        android:visibility="gone" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/recording_indicator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:background="@drawable/badge_background"
      android:drawablePadding="4dp"
      android:padding="10dp"
      android:text="@string/recording"
      android:textColor="@android:color/white"
      android:textSize="14sp"
      android:visibility="gone"
      tools:visibility="visible" />

    <LinearLayout
      android:id="@+id/join_status_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="vertical"
      android:visibility="visible"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <TextView
        android:id="@+id/join_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/joinLayoutTextColor"
        android:textSize="18sp" />

      <TextView
        android:id="@+id/join_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/joinLayoutTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/recording_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/recording_notice"
        android:textColor="@color/joinLayoutTextColor"
        android:textSize="14sp"
        android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginEnd="@dimen/fab_margin"
      android:layout_marginRight="@dimen/fab_margin"
      android:gravity="end|bottom"
      android:orientation="vertical"
      app:layout_anchor="@+id/room"
      app:layout_anchorGravity="center">

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/roundbutton"
        android:visibility="gone"
        app:backgroundTint="@color/lobbyMediaControls"
        app:srcCompat="@drawable/ic_add_circle_white_24px" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/local_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/roundbutton"
        app:backgroundTint="@color/lobbyMediaControls"
        app:srcCompat="@drawable/ic_videocam_white_24px" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/local_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/roundbutton"
        app:backgroundTint="@color/lobbyMediaControls"
        app:srcCompat="@drawable/ic_mic_white_24px" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/roundbutton"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_red_dark"
        app:srcCompat="@drawable/ic_call_end_white_24px" />

    </LinearLayout>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="?android:attr/windowBackground"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/stats_text"
        style="@style/AppTheme.Lobby.Drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/statistics"
        android:textSize="20sp" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stats_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

      <LinearLayout
        android:id="@+id/stats_disabled"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/stats_disabled_image"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/stats_disabled"
          app:srcCompat="@drawable/ic_stats_disabled_image" />

        <TextView
          android:id="@+id/stats_disabled_title"
          style="@style/AppTheme.Lobby.Drawer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:text="@string/stats_gathering_disabled"
          android:textSize="18sp" />

        <TextView
          android:id="@+id/stats_disabled_description"
          style="@style/AppTheme.Lobby.Drawer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:text="@string/stats_enable_in_settings"
          android:textSize="14sp" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
